# EBNFDataGenerator

./: .gitignore  CMakeLists.txt  DataGenerator.pro  README.md  basetoken.h  concattoken.h  customtoken.cpp  customtoken.h  figurebracetoken.h  main.cpp  maintoken.cpp  maintoken.h  ortoken.h  parser.cpp  parser.h  routines.cpp  routines.h  squarebracetoken.h  texttoken.h  tokens.cpp  tokens.h  tree.cpp  tree.h  treebuilder.cpp  treebuilder.h
src/: CMakeLists.txt  DataGenerator.pro  defines.h  deployment.pri  generator.cpp  generator.h  main.cpp  parser.cpp  parser.h  policy.cpp  policy.h  routines.cpp  routines.h  tokens.cpp  tokens.h  tree.cpp  tree.h  treebuilder.cpp  treebuilder.h
tests/: CMakeLists.txt  RoutinesTest.pro  generator_tests.cpp  main.cpp  parser_tests.cpp  routine_tests.cpp  tokenstest.cpp  tree_tests.cpp
tests/RoutinesTest/: RoutinesTest.pro  routinestester.cpp
tests/TokensTest/: TokensTest.pro  tokenstest.cpp
tests/src/: routinestester.cpp  tests.pro  tst_datageneratortester.cpp
